--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,6 +7,7 @@
     <meta name='theme-color' content=''>
     <link rel='canonical' href='{{ canonical_url }}'>
 
+
     {%- if settings.favicon != blank -%}
       <link
         rel='icon'
@@ -407,6 +408,19 @@ body {
       };
     </script>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
+
+
+    {%- if settings.predictive_search_enabled -%}
+      <script src='{{ 'predictive-search.js' | asset_url }}' defer='defer'></script>
+    {%- endif -%}
+
     <script src='https://unpkg.com/lucide@latest' defer></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
@@ -414,10 +428,5 @@ body {
       });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-
-    {%- if settings.predictive_search_enabled -%}
-      <script src='{{ 'predictive-search.js' | asset_url }}' defer='defer'></script>
-    {%- endif -%}
   </body>
 </html>
