--- a/sections/bento.liquid
+++ b/sections/bento.liquid
@@ -1,3 +1,6 @@
+{{ 'bootstrap-offcanvas.css' | asset_url | stylesheet_tag }}
+
+
 {%- style -%}
 
   .section-{{ section.id }}-padding {
@@ -26,7 +29,9 @@
     align-items: start;
     text-align: left;
     min-height: {{ section.settings.row_height }}px;
-    position: relative
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
   }
 
   /* Desktop View: Grid layout for screens wider than 960px */
@@ -41,7 +46,8 @@
     .bento-tile {
       width: auto;
       height: auto;
-      border-radius: 10px;
+      grid-column span 6 / span 6;
+      grid-row: span 1 / span 1;
     }
   }
 {%- endstyle -%}
@@ -49,7 +55,7 @@
 <section class="isolate section-{{ section.id }}-padding  color-{{ section.settings.color_scheme }}">
   <div class="{% unless section.settings.full_width %} page-width{% endunless %}">
     {%- unless section.settings.title == blank -%}
-      <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin multicolumn__title">
+      <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin">
         <h2 class="title inline-richtext {{ section.settings.heading_size }}">
           {{ section.settings.title }}
         </h2>
@@ -57,31 +63,62 @@
     {%- endunless -%}
     <ul class="bento-grid">
       {% for block in section.blocks %}
-        <li
-          {% if settings.animations_reveal_on_scroll %}
-          data-cascade
+        {% if block.type == 'Tile' %}
+          <li
+            class="bento-tile tw-group {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+            style="grid-column: span {{ block.settings.width }} / span {{ block.settings.width }};
+                   grid-row: span {{ block.settings.height }} / span {{ block.settings.height }};
+                   grid-column-start: {{ block.settings.start_column }};
+                   grid-row-start: {{ block.settings.start_row }};
+                   --animation-order: {{ forloop.index }}"
+            {% if settings.animations_reveal_on_scroll %}
+            data-cascade
+            {% endif %}
+            {{ block.shopify_attributes }}>
+            {% if block.settings.extended_description != blank %}
+              <button
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample"
+                aria-controls="offcanvasExample"
+                class="tw-absolute tw-bottom-6 tw-right-6 tw-w-16 tw-h-16 tw-rounded-full tw-bg-neutral-800 tw-z-10 tw-grid tw-place-items-center tw-hover-bg-neutral-700 active:tw-bg-neutral-900 active-">
+                {{ 'lucide-plus.svg' | inline_asset_content }}
+              </button>
+            {% endif %}
+            <h3 class="tw-z-10 {{ section.settings.heading_size }}">{{ block.settings.title }}</h3>
+            <div style="z-index: 10; font-size: {{section.settings.caption_size}}px">{{ block.settings.description }}</div>
+            {% unless block.settings.image == blank %}
+              <div style="display: block!important" class="tw-bg-gradient-to-b tw-from-black tw-h-1/2 tw-w-full tw-absolute tw-z-[5] tw-left-0 tw-top-0"></div>
+              {{ block.settings.image | image_url: width: 1200 | image_tag: widths: '300, 600, 900, 1200, 1600', class: "tw-z-1 tw-inset-0 tw-absolute tw-object-cover tw-w-full tw-h-full group-hover:tw-scale-105 tw-duration-500 tw-transition-all" }}{% endunless %}
+          </li>
+
+          {% if block.settings.extended_description != blank %}
+            <div
+              class="offcanvas offcanvas-end tw-p-8 tw-text-black tw-flex tw-flex-col tw-gap-6"
+              tabindex="-1"
+              id="offcanvasExample"
+              aria-labelledby="offcanvasExampleLabel">
+              <div class="tw-flex tw-w-full tw-justify-between tw-items-center">
+                <h5 class="h3 !tw-text-black tw-font-bold" id="offcanvasExampleLabel">{{ block.settings.title }}</h5>
+                <button
+                  type="button"
+                  class="btn-close text-reset"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close">
+                  {{ 'lucide-x.svg' | inline_asset_content }}
+                </button>
+              </div>
+              <div class="tw-bg-red-500">
+                {{ block.settings.extended_description }}
+              </div>
+            </div>
           {% endif %}
-          class="bento-tile {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
-          style="grid-column: span {{ block.settings.width }} / span {{ block.settings.width }};
-                      grid-row: span {{ block.settings.height }} / span {{ block.settings.height }};
-                      grid-column-start: {{ block.settings.start_column }};
-                      grid-row-start: {{ block.settings.start_row }};
-                     
-                      {% if settings.animations_reveal_on_scroll %}
- --animation-order: {{ forloop.index }};
-         {% endif %}"
-          {{ block.shopify_attributes }}>
-          <h3 class="tw-z-10 {{ section.settings.heading_size }}">{{ block.settings.title }}</h3>
-          <div style="z-index: 10; font-size: {{section.settings.caption_size}}px">{{ block.settings.description }}</div>
-          {% unless block.settings.image == blank %}
-            <div style="display: block!important" class="tw-bg-gradient-to-b tw-from-black tw-h-1/5 tw-w-full tw-absolute tw-z-[5] tw-left-0 tw-top-0"></div>
-            {{ block.settings.image | image_url: width: 600 | image_tag: widths: '300, 600', class: "tw-z-1 tw-inset-0 tw-absolute tw-object-cover tw-w-full tw-h-full" }}{% endunless %}
-        </li>
+
+        {% endif %}
       {% endfor %}
     </ul>
   </div>
 </section>
-
 
 {% schema %}
   {
@@ -206,6 +243,11 @@
             "type": "image_picker",
             "id": "image",
             "label": "Image"
+          },
+          {
+            "type": "richtext",
+            "id": "extended_description",
+            "label": "Tile extended description"
           },
           {
             "type": "range",
